feat: Add WhatsApp campaign orchestration with batch, schedule, and segmentation
- Implemented campaign models for WhatsApp batch sends and scheduled execution.
- Added audience segmentation rules based on lead stage, tags, source, and recent activity.
- Developed APIs for creating campaigns, previewing audience counts, and enqueuing sends.
- Introduced campaign scheduler and worker for handling scheduled sends.
- Enhanced outbound message handling for WhatsApp with new adapters and message processing logic.
- Created comprehensive tests for new features and ensured compatibility with existing systems.

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.1",
+    "@omini/agent-routing": "workspace:*",
     "@omini/core": "workspace:*",
     "@omini/database": "workspace:*",
     "@omini/queue": "workspace:*",
+    "@omini/whatsapp-bsp": "workspace:*",
     "hono": "^4.5.2"
   },
   "devDependencies": {
