feat: Add agent prompt analytics and external tool integration
- Implement prompt effectiveness tracking to measure agent performance.
- Introduce external tool adapter interface with a mock implementation.
- Extend API and console UI to visualize prompt performance metrics.
- Establish a standardized tool protocol for internal and external tools.
- Add governance controls for prompt management and permissions.
- Implement analytics reporting with last-touch attribution for campaigns.
- Enable real-time metrics and trend analysis for delivery and conversion rates.
- Integrate Langfuse cloud for enhanced prompt monitoring without disrupting existing tracking.

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hono/node-server": "^1.11.1",
     "@omini/agent-routing": "workspace:*",
+    "@omini/agent-tools": "workspace:*",
     "@omini/core": "workspace:*",
     "@omini/database": "workspace:*",
     "@omini/queue": "workspace:*",
