--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL="postgresql://omini:omini_dev_password@localhost:5432/omini_channel?schema=public"
-REDIS_URL="redis://localhost:6379"
+DATABASE_URL="postgresql://omini:omini_dev_password@localhost:5433/omini_channel?schema=public"
+REDIS_URL="redis://localhost:6380"
 BOOTSTRAP_TOKEN="dev_bootstrap"
-API_BASE="http://localhost:3000"
+API_BASE="http://localhost:3100"
+PORT="3100"
