--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ REDIS_URL="redis://localhost:6380"
 BOOTSTRAP_TOKEN="dev_bootstrap"
 API_BASE="http://localhost:3100"
 PORT="3100"
+QDRANT_URL="http://localhost:6333"
+QDRANT_API_KEY=""
+QDRANT_COLLECTION="omini_knowledge"
+OPENAI_API_KEY=""
+OPENAI_BASE_URL="https://api.openai.com/v1"
+OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
+KNOWLEDGE_SYNC_POLL_MS="600000"
