--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,15 @@ services:
       - "6380:6379"
     volumes:
       - omini_redis:/data
+  qdrant:
+    image: qdrant/qdrant:v1.10.1
+    restart: unless-stopped
+    ports:
+      - "6333:6333"
+    volumes:
+      - omini_qdrant:/qdrant/storage
 
 volumes:
   omini_postgres:
   omini_redis:
+  omini_qdrant:
