feat: Implement HTTP Tool Adapter with robust request handling and retry logic
feat: Add AI Insights processing with intent classification and database upsert functionality

feat: Introduce Journey Runs handler for managing journey triggers and steps with detailed processing logic

feat: Create Journey Scheduler to trigger journeys based on time and lead segmentation

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ REDIS_URL="redis://localhost:6380"
 BOOTSTRAP_TOKEN="dev_bootstrap"
 API_BASE="http://localhost:3100"
 PORT="3100"
+WEBHOOK_SIGNING_SECRET=""
+WEBHOOK_SIGNATURE_TTL_MS="300000"
+WEBHOOK_SIGNATURE_REQUIRED="false"
+CRM_TOOL_API_KEY=""
 QDRANT_URL="http://localhost:6333"
 QDRANT_API_KEY=""
 QDRANT_COLLECTION="omini_knowledge"
@@ -10,3 +14,5 @@ OPENAI_API_KEY=""
 OPENAI_BASE_URL="https://api.openai.com/v1"
 OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
 KNOWLEDGE_SYNC_POLL_MS="600000"
+JOURNEY_SCHEDULER_INTERVAL_MS="60000"
+AI_INSIGHTS_INTERVAL_MS="60000"
